# dotenvloader

./: .env  CMakeLists.txt  LICENSE  README.md  test.cpp
include/: dotenvloader.hpp
src/: dotenvloader.cpp
